feat: Removendo classes de teste do Sonar